<resources>
    <string name="app_name">Organnize</string>
    <string name="text_intro_1">Organize as suas contas de onde estiver</string>
    <string name="text_intro_2">Saiba para onde esta indo o seu dinheiro</string>
    <string name="text_intro_3">Nunca mais esqueça de pagar uma conta</string>
    <string name="text_intro_4">Tudo organizado, no telemóvel ou computador </string>
    <string name="text_sub_intro_1">Simples, fácil de usar e grátis</string>
    <string name="text_sub_intro_2">Categorizando seus lançamentos e vendo o destino de cada centavo</string>
    <string name="text_sub_intro_3">Receba alertas quando quiser</string>
    <string name="text_sub_intro_4">Use no seu smartphone e acessando pelo site</string>
    <string name="text_register_title">Crie sua conta grátis</string>
    <string name="text_register_sub">Junte-se a meio milhão de pessoas e comece já</string>
    <string name="button_cadastre_se">Cadastre-se</string>
    <string name="text_register">Já tenho conta</string>
    <string name="name">Nome</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="termos">Termos de uso</string>
    <string name="text_access">Acesse sua conta</string>
    <string name="button_login">Entrar</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="date">Data</string>
    <string name="category">Categoria</string>
    <string name="description">Descrição</string>
    <string name="zero">€ 00,00</string>
    <string name="salary">Ordenado</string>
    <string name="salary_month">Ordenado mensal</string>
    <string name="loading">Carregando...</string>
    <string name="balance">Saldo Geral</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="logout">Sair</string>
</resources>